fixed alignment of social icons

--- a/src/components/ecosystems/HomePage/presentation/HomePageMain/HomePageMain.css
+++ b/src/components/ecosystems/HomePage/presentation/HomePageMain/HomePageMain.css
@@ -15,6 +15,16 @@
   border-style: solid;
 }
 
+.followText{
+  display: inline-flex;
+  justify-content: center;
+  vertical-align: middle;
+}
+
 .socialIcons{
+  display: inline-flex;
+  justify-content: center;
   margin-left: 15px;
+  width: 20px;
+  height: 20px;
 }
